name:                shell-conduit
version:             4.3
synopsis:            Write shell scripts with Conduit
description:         Write shell scripts with Conduit. See "Data.Conduit.Shell" for documentation.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 Chris Done
category:            Conduit, Scripting
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Data.Conduit.Shell
                     Data.Conduit.Shell.PATH
                     Data.Conduit.Shell.TH
                     Data.Conduit.Shell.Process
                     Data.Conduit.Shell.Types
                     Data.Conduit.Shell.Segments
                     Data.Conduit.Shell.Variadic
  build-depends:     async >= 2.0.1.5
                   , base >= 4 && <5
                   , bytestring
                   , conduit
                   , conduit-extra
                   , control-monad-loop
                   , directory
                   , filepath
                   , monad-control
                   , monads-tf
                   , process
                   , resourcet
                   , semigroups
                   , split
                   , template-haskell
                   , text
                   , these
                   , transformers
                   , transformers-base
                   , unix >= 2.7.0.1
