name:                shell-conduit
version:             4.6.1
synopsis:            Write shell scripts with Conduit
description:         Write shell scripts with Conduit. See "Data.Conduit.Shell" for documentation.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          Sibi Prabakaran <sibi@psibi.in>
copyright:           2014-2017 Chris Done
category:            Conduit, Scripting
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://github.com/psibi/shell-conduit
extra-source-files:  CHANGELOG.md README.md
bug-reports:         https://github.com/psibi/shell-conduit/issues

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Data.Conduit.Shell
                     Data.Conduit.Shell.PATH
                     Data.Conduit.Shell.TH
                     Data.Conduit.Shell.Process
                     Data.Conduit.Shell.Types
                     Data.Conduit.Shell.Segments
                     Data.Conduit.Shell.Variadic
  build-depends:     async >= 2.0.1.5
                   , base >= 4 && <5
                   , bytestring
                   , conduit
                   , conduit-extra
                   , control-monad-loop
                   , directory
                   , filepath
                   , monad-control
                   , monads-tf
                   , process >= 1.2.1.0
                   , resourcet
                   , semigroups
                   , split
                   , template-haskell
                   , text
                   , transformers
                   , transformers-base
                   , unix >= 2.7.0.1

test-suite test
 type:            exitcode-stdio-1.0
 ghc-options:     -Wall -threaded
 hs-source-dirs:  test/
 main-is:         Spec.hs
    
 build-depends:   base >= 4.5 && < 5,
                  shell-conduit,
                  hspec >= 2.1 && < 3,
                  hspec-expectations,
                  template-haskell,
                  conduit,
                  bytestring,
                  conduit-extra

source-repository head
  type:     git
  location: http://github.com/psibi/shell-conduit
